# pydualsense

./: .buildinfo  .gitignore  70-ps5-controller.rules  LICENSE  README.md  api.html  ds_enum.html  ds_eventsystem.html  ds_main.html  examples.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pydualsense.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  usage.html
.doctrees/: api.doctree  ds_enum.doctree  ds_eventsystem.doctree  ds_main.doctree  environment.pickle  examples.doctree  index.doctree  modules.doctree  pydualsense.doctree  usage.doctree
.github/: dependabot.yml
.github/workflows/: docs_publish.yml  python-mypy.yml  python-publish.yml
_sources/: api.rst.txt  ds_eventsystem.rst.txt  examples.rst.txt  index.rst.txt  modules.rst.txt  pydualsense.rst.txt
docs/: Makefile
docs/source/: api.rst  conf.py  ds_enum.rst  ds_eventsystem.rst  ds_main.rst  index.rst  usage.rst
examples/: README.md  Test_lib.py  effects.py  leds.py  multi-controllers-selector.py  read_all_input_channels.py  read_controller.py  test_trigger_value.py  trigger_effects.py
pydualsense/: __init__.py  checksum.py  enums.py  event_system.py  hidguardian.py  pydualsense-demo.py  pydualsense.py
